Bug 20765 - get_session_handlers_reply: shouldn't assume that session_handlers is not NULL
Summary: get_session_handlers_reply: shouldn't assume that session_handlers is not NULL
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-farsight (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-20 06:20 UTC by Guillaume Desmottes
Modified: 2009-03-21 16:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Guillaume Desmottes 2009-03-20 06:20:02 UTC
Original empathy bug: http://bugzilla.gnome.org/show_bug.cgi?id=574397

(empathy:14883): tp-glib-DEBUG: _tp_connection_clean_up_handle_refs: 0x8c2e508
** (empathy:14883): DEBUG: tp_contact_factory_connection_invalidated_cb:
Connection invalidated
(empathy:14883): tp-glib-DEBUG: tp_connection_dispose: 0x8c2e508
(empathy:14883): tp-glib-DEBUG: tp_proxy_dispose: 0x8c2e508
(empathy:14883): tp-glib-DEBUG: tp_connection_finalize: 0x8c2e508
(empathy:14883): tp-glib-DEBUG: tp_proxy_finalize: 0x8c2e508
** (empathy:14883): DEBUG: tp_call_request_streams_cb: Error requesting
streams: Name owner lost (service crashed?)

** (empathy:14883): WARNING **: ListProperties(): Name owner lost (service
crashed?)

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0xb684e720 (LWP 14883)]
get_session_handlers_reply (channel_proxy=0x8ff8f10, session_handlers=0x0,
error=0x8ed7100, user_data=0x0, weak_object=0x8fe1c08) at channel.c:865
865       self->priv->sessions = g_ptr_array_sized_new (session_handlers->len);
(gdb) bt
#0  get_session_handlers_reply (channel_proxy=0x8ff8f10, session_handlers=0x0,
error=0x8ed7100, user_data=0x0, weak_object=0x8fe1c08) at channel.c:865
#1  0xb7f31301 in
_tp_cli_channel_interface_media_signalling_invoke_callback_get_session_handlers
(self=0x8ff8f10, error=0x8ed7100, args=0x0, 
    generic_callback=0xb7189ef0 <get_session_handlers_reply>, user_data=0x0,
weak_object=0x8fe1c08) at _gen/tp-cli-channel-body.h:7193
#2  0xb7f8aaf7 in tp_proxy_pending_call_idle_invoke (p=0x9085850) at
proxy-methods.c:153
#3  0xb71c67c1 in g_idle_dispatch (source=0x908a370, callback=0x8fe1c08,
user_data=0x9085850) at /build/buildd/glib2.0-2.18.2/glib/gmain.c:4235
#4  0xb71c86f8 in IA__g_main_context_dispatch (context=0x8ad9f18) at
/build/buildd/glib2.0-2.18.2/glib/gmain.c:2144
#5  0xb71cbda3 in g_main_context_iterate (context=0x8ad9f18, block=1,
dispatch=1, self=0x8ab2408) at /build/buildd/glib2.0-2.18.2/glib/gmain.c:2778
#6  0xb71cc2c2 in IA__g_main_loop_run (loop=0x8d549e0) at
/build/buildd/glib2.0-2.18.2/glib/gmain.c:2986
#7  0xb7a3e3a9 in IA__gtk_main () at
/build/buildd/gtk+2.0-2.14.4/gtk/gtkmain.c:1200
#8  0x08058290 in main (argc=146983496, argv=0x2) at empathy.c:564
Comment 1 Guillaume Desmottes 2009-03-20 06:20:19 UTC
<smcv> cassidy: it's assuming that session_handlers is non-NULL, which is untrue in the error case
Comment 3 Olivier Crête 2009-03-21 16:16:35 UTC
Thank you, patch has been merged into master. This will be released in tp-fs 0.0.7.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.