get_session_handlers_reply: don't create the sessions ptr array if an error was raised

Should fix http://bugs.freedesktop.org/show_bug.cgi?id=20765